# spoti_gui

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  todo
engine/minilibx-linux/test/: mlx-test
inc/gui/: container.h  container_struct.h  element.h  interaction_tools.h  methodes.h
inc/math_vec/: methodes.h  types.h
lib/inc/: vector.h
lib/src/: adder.c  manager.c
src/: random.c  vec2f_test.c
src/gui/: container.c  element.c  interaction_tools.c
src/gui/element/: none.c  text.c
